@@ -1,5 +1,7 @@
 package com.eureka.smartrecruit.service;
 
+import com.eureka.smartrecruit.domain.Application;
+import com.eureka.smartrecruit.domain.Bid;
 import com.eureka.smartrecruit.domain.Job;
 import com.eureka.smartrecruit.domain.User;
 import com.eureka.smartrecruit.domain.enumeration.JobStatus;
@@ -12,8 +14,8 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -23,7 +25,7 @@ public class JobService {
     private final JobRepository jobRepository;
 
     public void create(final Job job) {
-        job.setStatus(JobStatus.PENDING);
+        job.setStatus(JobStatus.NEW);
         jobRepository.save(job);
     }
 
@@ -31,40 +33,59 @@ public class JobService {
         jobRepository.save(job);
     }
 
-    public void delete(final Long id) {
-        jobRepository.delete(id);
-    }
-
     public void approve(final Job job) {
-        job.getStatus().open(job);
-        jobRepository.save(job);
+        job.setStatus(job.getStatus().approve(job));
+        update(job);
     }
 
     public void reject(final Job job) {
-        job.getStatus().reject(job);
-        jobRepository.save(job);
+        job.setStatus(job.getStatus().reject(job));
+        update(job);
     }
 
-    public void finish(Job job) {
-        job.getStatus().finish(job);
-        jobRepository.save(job);
+    public void finish(final Job job) {
+        job.setStatus(job.getStatus().finish(job));
+        update(job);
     }
 
+    public void dispute(final Job job) {
+        job.setStatus(job.getStatus().dispute(job));
+        update(job);
+    }
 
+    public void archive(final Job job) {
+        job.setStatus(job.getStatus().archive(job));
+        update(job);
+    }
 
+    public void cancel(final Job job) {
+        job.setStatus(job.getStatus().cancel(job));
+        update(job);
+    }
 
+    public void accept(final Job job, Application application) {
+        application.setAccepted(true);
+        application.setAcceptedOn(LocalDateTime.now());
+        job.setStatus(job.getStatus().start(job));
+        update(job);
+    }
+
+    public void accept(final Job job, Bid bid) {
+        bid.setAccepted(true);
+        bid.setAcceptedOn(LocalDateTime.now());
+        job.setStatus(job.getStatus().start(job));
+        update(job);
+    }
 
     public Job findById(final Long id) {
         return jobRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException(String.format("Could not find job with id: %s", id)));
     }
 
     public List<Job> find(Predicate predicate) {
-        return Seq.seq(jobRepository.findAll(predicate)).collect(Collectors.toList());
+        return Seq.seq(jobRepository.findAll(predicate)).toList();
     }
 
     public List<Job> findMyJobs() {
-        return jobRepository.findByCreatedBy(((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId());
+        return jobRepository.findByCreatedBy((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal());
     }
-
-
 }
