@@ -1,12 +1,12 @@
 package com.eureka.smartrecruit.web.controller;
 
 import com.eureka.smartrecruit.domain.Dispute;
-import com.eureka.smartrecruit.domain.Job;
 import com.eureka.smartrecruit.dto.DisputeDto;
 import com.eureka.smartrecruit.service.DisputeService;
 import com.eureka.smartrecruit.service.JobService;
 import lombok.RequiredArgsConstructor;
 import org.dozer.Mapper;
+import org.jooq.lambda.Seq;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,7 +17,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -28,22 +27,27 @@ public class DisputeResource {
     private final JobService jobService;
     private final Mapper mapper;
 
-    @RequestMapping(method=RequestMethod.POST, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(method=RequestMethod.POST)
     @ResponseStatus(HttpStatus.CREATED)
     public void create(@PathVariable("jobId") Long jobId, @RequestBody DisputeDto disputeDto) {
-        Job job = jobService.findById(jobId);
         Dispute dispute = mapper.map(disputeDto, Dispute.class);
-        disputeService.create(dispute, job);
+        dispute.setJob(jobService.findById(jobId));
+        disputeService.create(dispute);
     }
 
-    @RequestMapping(method=RequestMethod.PUT, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(method=RequestMethod.PUT)
     @ResponseStatus(HttpStatus.OK)
     public void update(@RequestBody DisputeDto disputeDto) {
         Dispute dispute = disputeService.findById(disputeDto.getId());
+        dispute.setSubject(disputeDto.getSubject());
+        dispute.setComplaint(disputeDto.getComplaint());
+        dispute.setReply(disputeDto.getReply());
+        dispute.setAdminReply(disputeDto.getAdminReply());
+        dispute.setResolved(disputeDto.isResolved());
         disputeService.update(dispute);
     }
 
-    @RequestMapping(value="/{id}", method=RequestMethod.DELETE, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(value="/{id}", method=RequestMethod.DELETE)
     @ResponseStatus(HttpStatus.OK)
     public void delete(@PathVariable("id") Long id) {
         disputeService.delete(id);
@@ -51,7 +55,6 @@ public class DisputeResource {
 
     @RequestMapping(method=RequestMethod.GET, produces={ MediaType.APPLICATION_JSON_VALUE })
     public List<DisputeDto> findAll(@PathVariable("jobId") Long jobId) {
-        Job job = jobService.findById(jobId);
-        return job.getDisputes().stream().map(dispute -> mapper.map(dispute, DisputeDto.class)).collect(Collectors.toList());
+        return Seq.seq(jobService.findById(jobId).getDisputes()).map(dispute -> mapper.map(dispute, DisputeDto.class)).toList();
     }
 }
