@@ -1,12 +1,12 @@
 package com.eureka.smartrecruit.web.controller;
 
 import com.eureka.smartrecruit.domain.Feedback;
-import com.eureka.smartrecruit.domain.User;
 import com.eureka.smartrecruit.dto.FeedbackDto;
 import com.eureka.smartrecruit.service.FeedbackService;
 import com.eureka.smartrecruit.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.dozer.Mapper;
+import org.jooq.lambda.Seq;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,7 +17,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -28,17 +27,16 @@ public class FeedbackResource {
     private final UserService userService;
     private final Mapper mapper;
 
-    @RequestMapping(method=RequestMethod.POST, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(method=RequestMethod.POST)
     @ResponseStatus(HttpStatus.CREATED)
     public void create(@PathVariable("userId") Long userId, @RequestBody FeedbackDto feedbackDto) {
-        User user = userService.findById(userId);
         Feedback feedback = mapper.map(feedbackDto, Feedback.class);
-        feedbackService.create(feedback, user);
+        feedback.setUser(userService.findById(userId));
+        feedbackService.create(feedback);
     }
 
     @RequestMapping(method=RequestMethod.GET, produces={ MediaType.APPLICATION_JSON_VALUE })
     public List<FeedbackDto> findAll(@PathVariable("userId") Long userId) {
-        User user = userService.findById(userId);
-        return user.getFeedback().stream().map(feedback -> mapper.map(feedback, FeedbackDto.class)).collect(Collectors.toList());
+        return Seq.seq(userService.findById(userId).getFeedback()).map(feedback -> mapper.map(feedback, FeedbackDto.class)).toList();
     }
 }
