@@ -5,6 +5,7 @@ import com.eureka.smartrecruit.dto.MembershipDto;
 import com.eureka.smartrecruit.service.MembershipService;
 import lombok.RequiredArgsConstructor;
 import org.dozer.Mapper;
+import org.jooq.lambda.Seq;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,7 +16,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -25,14 +25,13 @@ public class MembershipResource {
     private final MembershipService membershipService;
     private final Mapper mapper;
 
-    @RequestMapping(method=RequestMethod.POST, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(method=RequestMethod.POST)
     @ResponseStatus(HttpStatus.CREATED)
     public void create(@RequestBody MembershipDto membershipDto) {
-        Membership membership = mapper.map(membershipDto, Membership.class);
-        membershipService.create(membership);
+        membershipService.create(mapper.map(membershipDto, Membership.class));
     }
 
-    @RequestMapping(method=RequestMethod.PUT, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(method=RequestMethod.PUT)
     @ResponseStatus(HttpStatus.OK)
     public void update(@RequestBody MembershipDto membershipDto) {
         Membership membership = membershipService.findById(membershipDto.getId());
@@ -43,7 +42,7 @@ public class MembershipResource {
         membershipService.update(membership);
     }
 
-    @RequestMapping(value="/{id}", method=RequestMethod.DELETE, produces={ MediaType.APPLICATION_JSON_VALUE })
+    @RequestMapping(value="/{id}", method=RequestMethod.DELETE)
     @ResponseStatus(HttpStatus.OK)
     public void delete(@PathVariable("id") Long id) {
         membershipService.delete(id);
@@ -51,6 +50,6 @@ public class MembershipResource {
 
     @RequestMapping(method=RequestMethod.GET, produces={ MediaType.APPLICATION_JSON_VALUE })
     public List<MembershipDto> findAll() {
-        return membershipService.findAll().stream().map(membership -> mapper.map(membership, MembershipDto.class)).collect(Collectors.toList());
+        return Seq.seq(membershipService.findAll()).map(membership -> mapper.map(membership, MembershipDto.class)).toList();
     }
 }
